--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.12.1",
     "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.31.0",
+    "@tanstack/react-query-devtools": "^5.31.0",
     "bcrypt": "^5.1.1",
     "next": "14.2.2",
     "react": "^18",
