--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@storybook/addon-interactions": "^8.0.8",
     "@storybook/addon-links": "^8.0.8",
     "@storybook/addon-onboarding": "^8.0.8",
+    "@storybook/addon-themes": "^8.0.9",
     "@storybook/blocks": "^8.0.8",
     "@storybook/nextjs": "^8.0.8",
     "@storybook/react": "^8.0.8",
@@ -39,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "clsx": "^2.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
