--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
+    "@playwright/test": "^1.43.1",
+    "@storybook/addon-a11y": "^8.0.9",
     "@storybook/addon-essentials": "^8.0.8",
     "@storybook/addon-interactions": "^8.0.8",
     "@storybook/addon-links": "^8.0.8",
